fix: app tray button z-index and location

--- a/src/styles/app/bar.sass
+++ b/src/styles/app/bar.sass
@@ -27,7 +27,7 @@ header.cn-app-bar
     text-overflow: ellipsis
     font-weight: var(--cn-font-weight-heading-2)
 header.cn-app-bar
-  cn-tray-button[ariaexpanded="true"]
+  cn-tray-button[aria-expanded="true"]
     right: calc(var(--cn-gap) * 1.5)
     position: fixed
     z-index: calc(var(--z-index-tray) + 1000)
@@ -35,7 +35,7 @@ header.cn-app-bar
 @include media-query-md-and-up
   header.cn-app-bar
     margin-left: var(--cn-rail-width)
-    cn-tray-button[ariaexpanded="true"]
+    cn-tray-button[aria-expanded="true"]
       left: calc(var(--cn-tray-width) + var(--cn-gap))
       right: inherit
     
@@ -45,5 +45,5 @@ header.cn-app-bar
   header.cn-app-bar
     margin-left: var(--cn-rail-width)
     transition: margin-left 0.3s ease-in-out  
-  body:has(cn-tray-button[ariaexpanded="true"]) header.cn-app-bar
+  body:has(cn-tray-button[aria-expanded="true"]) header.cn-app-bar
     margin-left: calc(var(--cn-rail-width) + var(--cn-tray-width))
