--- a/src/styles/app/main.sass
+++ b/src/styles/app/main.sass
@@ -16,6 +16,5 @@ main
   main
     container-type: inline-size
     margin-left: var(--cn-rail-width)
-    transition: margin-left 0.3s ease-in-out    
-  body:has(cn-tray-button[ariaexpanded="true"]) main
+  body:has(cn-tray-button[aria-expanded="true"]) main
     margin-left: calc(var(--cn-rail-width) + var(--cn-tray-width))
