--- a/src/styles/core/default-design-tokens.sass
+++ b/src/styles/core/default-design-tokens.sass
@@ -32,3 +32,4 @@
   --z-index-bar: calc(2 * var(--z-index-base))
   --z-index-tray: calc(3 * var(--z-index-base))
   --z-index-rail: calc(4 * var(--z-index-base))
+  --z-index-tray-button: calc(5 * var(--z-index-base))
